--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </style>
 </head>
 <body>
-  Try it free
+    <header class="header">
+        <img src="./images/logo.svg"/>
+        <button class="try">Try it free</button>        
+    </header>
 
   Build The Community Your Fans Will Love
 
