--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <div class="contenedor">
     <header class="header">
         <img src="./images/logo.svg"/>
         <button class="try">Try it free</button>        
     </header>
+    <main class="main">
+        <h1 class="titulo">Build The Community Your Fans Will Love</h1>
+        <p class="parrafo">Huddle re-imagines the way we build communities. You have a voice, but so does 
+            your audience. Create connections with your users as you engage in genuine discussion.</p>
+    </main>
 
-  Build The Community Your Fans Will Love
+   </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
+  
+
+   
 
   Get Started For Free
 
