--- a/index.html
+++ b/index.html
@@ -2,33 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with curved sections</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="styles.css">
+  <title>Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div class="contenedor">
-    <header class="header">
-        <img src="./images/logo.svg"/>
-        <button class="try">Try it free</button>        
-    </header>
-    <main class="main">
-        <h1 class="titulo">Build The Community Your Fans Will Love</h1>
-        <p class="parrafo">Huddle re-imagines the way we build communities. You have a voice, but so does 
-            your audience. Create connections with your users as you engage in genuine discussion.</p>
-    </main>
-
-   </div>
-
-  
-
    
+  Try it free     
+    <h1>Build The Community Your Fans Will Love</h1>
+  Build The Community Your Fans Will Love
 
+  Huddle re-imagines the way we build communities. You have a voice, 
+  but so does your audience. Create connections with your users as you engage in genuine discussion.  
+            
   Get Started For Free
 
   1.4k+
@@ -64,11 +51,5 @@
 
   Subscribe
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
